# alfred-workflow-template

./: .gitignore  .pre-commit-config.yaml  AI_CONTEXT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPING.md  Makefile  README-jp.md  README.md  README_TEMPLATE-jp.md  README_TEMPLATE.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dev-charter-check.yml  release.yml
docs/: architecture.md  configuration-builder.md  development.md  file-map.md  specification.md  ui-design.md  usage.md
docs/dev-charter/topics/: PROJECT_README_GUIDELINES.md
scripts/: build.sh  dev.sh  extract_changelog.py  read_version.py  release.sh  vendor.sh
src/alfred/: __init__.py  cache.py  config.py  logger.py  response.py  router.py  safe_run.py
src/app/: __init__.py  core.py
src/app/clients/: __init__.py  api_client.py
src/app/commands/: __init__.py  config_cmd.py  help_cmd.py  open_cmd.py  search.py
src/app/services/: __init__.py  example_service.py
tests/: conftest.py  test_alfred.py  test_commands.py  test_services.py
workflow/: info.plist
workflow/scripts/: entry.py
