[project]
name = "alfred-workflow-template"
version = "0.1.0"
description = "Alfred Workflow development template"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
# Runtime dependencies - also add to requirements.txt for vendor install
dependencies = []

[project.urls]
Homepage = "https://github.com/yourname/alfred-workflow-template"
Repository = "https://github.com/yourname/alfred-workflow-template"
"Bug Tracker" = "https://github.com/yourname/alfred-workflow-template/issues"
Changelog = "https://github.com/yourname/alfred-workflow-template/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.9",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
# Install dev extras via: uv sync --extra dev

[tool.setuptools.packages.find]
# Packages are under src/ - explicit config avoids flat-layout auto-discovery issues
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff - linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "ANN",  # flake8-annotations (type hints)
    "ARG",  # unused arguments
    "BLE",  # blind except
    "PTH",  # pathlib usage
    "RUF",  # ruff-specific
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "ARG"]

# ---------------------------------------------------------------------------
# Ruff formatter (replaces black)
# ---------------------------------------------------------------------------
[tool.ruff.format]
# Use double quotes, same as black defaults
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
mypy_path = "src"
strict = true

# Override per third-party library rather than globally suppressing.
# Add entries here when vendoring a library that has no type stubs.
[[tool.mypy.overrides]]
module = [
    # Example: "requests.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks tests requiring external services",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
